[courier-service]Fix docs swagger id -> uid
